# Todo-AI-Chatbot-

./: .gitignore  AGENTS.md  API_URL_FIX.md  APPLICATION_BEHAVIOR_CONSOLE_LOG.md  ASYNCSESSION_FIX_SUMMARY.md  AUTH_PERSISTENCE_ANALYSIS.md  AUTH_QUICK_REFERENCE.md  AUTH_REFRESH_FIX.md  AUTO_TEST_RESULTS.md  BACKEND_RESTART_REQUIRED.md  BACKEND_VERIFICATION_REPORT.md  BEFORE_SUBMITTING.md  BUG_FIX_REPORT.md  BUILD_SUCCESS.md  CLAUDE.md  COMPLETE_SESSION_SUMMARY.md  COMPLETE_WORKFLOW_VERIFICATION.md  COMPLETION_SUMMARY.md  CONFIGURATION_SUMMARY.md  CONSOLE_TESTING_RESULTS.txt  COOKIE_AUTH_TEST_GUIDE.md  CURRENT_APPLICATION_STATUS.md  CURRENT_STATUS.md  DATABASE_OFFLINE_INFO.md  DATABASE_SETUP_GUIDE.md  DATABASE_URL_UPDATE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  END_TO_END_TEST_REPORT.md  ERROR_MESSAGE_FIX.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  FIX_VERIFICATION.md  FRONTEND_FIX_COMPLETE.md  FRONTEND_FIX_SUMMARY.md  HTTP_ONLY_COOKIES_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  (+31 more)
backend/: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  GENERATED_FILES.txt  IMPLEMENTATION_SUMMARY.md  PHASE3_README.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  requirements.txt  test_auth_flow.py  vercel.json
backend/api/: index.py
backend/src/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  security.py
backend/src/app/api/: dependencies.py
backend/src/app/mcp/: tools.py
backend/src/app/middleware/: auth.py  rate_limit.py
backend/src/app/migrations/: 001_add_task_indexes.py  env.py
backend/src/app/schemas/: __init__.py  auth.py  task.py  user.py
backend/src/app/services/: auth.py  task.py  (+1 more)
(+98 files in other folders)
